Fix unintended overlapping

--- a/_src/assets/scss/layout/_hero.scss
+++ b/_src/assets/scss/layout/_hero.scss
@@ -1,12 +1,8 @@
-.header__container{
-    width:100%;
-    position:absolute;
-    top:0;
-    .menu-button{
-        position:fixed;
-        z-index: 5;
+.menu-button{
+    position:fixed;
+    z-index: 5;
     }
-}
+
 
 .hero__image {
     height: 568px;
